[package]
name = "tracing-opentelemetry"
version = "0.23.0"
authors = [
    "Julian Tescher <julian@tescher.me>",
    "Tokio Contributors <team@tokio.rs>"
]
description = "OpenTelemetry integration for tracing"
homepage = "https://github.com/tokio-rs/tracing-opentelemetry"
repository = "https://github.com/tokio-rs/tracing-opentelemetry"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["tracing", "opentelemetry", "jaeger", "zipkin", "async"]
license = "MIT"
edition = "2018"
rust-version = "1.65.0"

[features]
default = ["tracing-log", "metrics"]
# Enables support for exporting OpenTelemetry metrics
metrics = ["opentelemetry/metrics","opentelemetry_sdk/metrics", "smallvec"]

[dependencies]
opentelemetry = { version = "0.22.0", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.22.0", default-features = false, features = ["trace"] }
tracing = {  git = "https://github.com/tokio-rs/tracing.git", rev = "b8c45ccd067a6aebdd9257c5edda6bc90bcf9028", default-features = false, features = ["std"] }
tracing-core = { git = "https://github.com/tokio-rs/tracing.git", rev = "b8c45ccd067a6aebdd9257c5edda6bc90bcf9028" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing.git", rev = "b8c45ccd067a6aebdd9257c5edda6bc90bcf9028", features = ["registry", "std"] }
tracing-log = {  git = "https://github.com/tokio-rs/tracing.git", rev = "b8c45ccd067a6aebdd9257c5edda6bc90bcf9028", default-features = false, optional = true }
once_cell = "1.13.0"

# Fix minimal-versions
async-trait = { version = "0.1.56", optional = true }
futures-util = { version = "0.3.17", optional = true }
thiserror = { version = "1.0.31", optional = true }
smallvec = { version = "1.0", optional = true }

[dev-dependencies]
async-trait = "0.1.56"
criterion = { version = "0.5.1", default-features = false, features = ["html_reports"] }
opentelemetry = { version = "0.22.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.22.0", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = "0.21.0"
opentelemetry-stdout = { version = "0.3.0", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.15.0", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.14.0"
futures-util = { version = "0.3.17", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = { git = "https://github.com/tokio-rs/tracing.git", rev = "b8c45ccd067a6aebdd9257c5edda6bc90bcf9028", default-features = false, features = ["std", "attributes"] }
tracing-error = { git = "https://github.com/tokio-rs/tracing.git", rev = "b8c45ccd067a6aebdd9257c5edda6bc90bcf9028" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing.git", rev = "b8c45ccd067a6aebdd9257c5edda6bc90bcf9028",  default-features = false, features = ["registry", "std", "fmt"] }

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
js-sys = "0.3.64"
web-time = "1.0.0"

[lib]
bench = false

[[bench]]
name = "trace"
harness = false

[[bench]]
name = "metrics"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
